--- a/편지.html
+++ b/편지.html
@@ -16,18 +16,18 @@
         <span class="heart">🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷</span>
       </div>
     </div>
-    <img src="ChatGPT Image 2025년 7월 28일 오후 12_07_22 1.png" alt="" class="pix">
+    <img src="01.png" alt="" class="pix">
 
     <div class="letter-container">
   <h2 class="msg-title">편지가 도착했습니다</h2>
 
   <!-- 닫힌 편지 -->
-  <img src="화면_캡처_2025-07-28_120357-removebg-preview 1.png" alt="닫힌편지" class="letter-closed">
+  <img src="03.png" alt="닫힌편지" class="letter-closed">
 
   <p class="msg-sub">읽어보려면 봉투를 클릭하세요</p>
 
   <!-- 열린 편지 -->
-  <img src="images-removebg-preview 1.png" alt="열린편지" class="letter-open hidden">
+  <img src="02.png" alt="열린편지" class="letter-open hidden">
 
   <!-- 편지 내용 -->
   <div class="letter-text hidden">
