--- a/편지.html
+++ b/편지.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>병호 생일 축하</title>
-  <link rel="stylesheet" href="편지.css">
+  <link rel="stylesheet" href="./편지.css">
 </head>
 
 <body>
@@ -16,18 +16,18 @@
         <span class="heart">🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷🩷</span>
       </div>
     </div>
-    <img src="01.png" alt="" class="pix">
+    <img src="./01.png" alt="" class="pix">
 
     <div class="letter-container">
   <h2 class="msg-title">편지가 도착했습니다</h2>
 
   <!-- 닫힌 편지 -->
-  <img src="03.png" alt="닫힌편지" class="letter-closed">
+  <img src="./03.png" alt="닫힌편지" class="letter-closed">
 
   <p class="msg-sub">읽어보려면 봉투를 클릭하세요</p>
 
   <!-- 열린 편지 -->
-  <img src="02.png" alt="열린편지" class="letter-open hidden">
+  <img src="./02.png" alt="열린편지" class="letter-open hidden">
 
   <!-- 편지 내용 -->
   <div class="letter-text hidden">
