--- a/letter.html
+++ b/letter.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>병호 생일 축하</title>
-  <link rel="stylesheet" href="./편지.css">
+  <link rel="stylesheet" href="./letter.css">
 </head>
 
 <body>
